Fix focus visible

--- a/src/components/BackLinks/BackLinks.module.css
+++ b/src/components/BackLinks/BackLinks.module.css
@@ -1,6 +1,6 @@
 
 .back-links {
-    font-family: inherit;
+    font-family: "Poppins", sans-serif;
     font-size: 0.9rem;
     grid-row: 1 / 2;
     grid-column: 1 / 2;
@@ -37,16 +37,17 @@
 
 .back-links a {
     color: inherit;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     text-decoration: none;
     letter-spacing: 0.1px;
 }
 
-.back-links a:focus-visible {
+/* .back-links a:focus-visible {
     text-decoration: none;
     outline: 3px dashed var(--text-dark-color);
     outline-offset: 3px;
-}
+} */
 
 .back-links ol li:nth-of-type(1) a,
 .back-links ol li:nth-of-type(2) a{
@@ -61,9 +62,14 @@
     color: var(--text-dark-color);
 }
 
-.back-links ol li:nth-of-type(1) a:focus-visible,
+/* .back-links ol li:nth-of-type(1) a:focus-visible,
 .back-links ol li:nth-of-type(2) a:focus-visible {
     text-decoration: none;
     outline: 3px dashed var(--text-dark-color);
     outline-offset: 3px;
+} */
+
+.back-links ol li:nth-of-type(1) a:focus,
+.back-links ol li:nth-of-type(2) a:focus {
+    text-decoration: none;
 }
