--- a/src/components/TableOfContents/TableOfContents.module.css
+++ b/src/components/TableOfContents/TableOfContents.module.css
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
     font-size: 0.9rem;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .table-contents nav {
@@ -39,6 +39,7 @@
 .table-contents ul li a {
     align-self: flex-start;
     color: var(--cream-color);
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-size: 0.8rem;
     text-decoration: underline;
@@ -51,7 +52,7 @@
 .table-contents ul li a:hover {
     color: var(--code-blue-color);
     border: 1.7px solid var(--code-blue-color);
-    /* border-radius: 5px; */
+    border-radius: 5px;
     padding: 2px;
     font-weight: 400; 
     text-decoration: none;
@@ -60,16 +61,22 @@
 .table-contents ul li a.active {
     color: var(--code-blue-color);
     border: 1.7px solid var(--code-blue-color);
-    /* border-radius: 5px; */
+    border-radius: 5px;
     padding: 2px;
     font-weight: 400; 
     text-decoration: none;
 }
 
+/* .table-contents ul li a:focus {
+    text-decoration: none;
+    border: none;
+    border-radius: 0;
+} */
+
 .table-contents ul li a:focus-visible {
     text-decoration: none;
-    outline: 3px dashed var(--cream-color);
-    outline-offset: 2px;
+    outline: 2px solid var(--cream-color);
+    outline-offset: 3px;
     border: none;
     border-radius: 0;
 }
