--- a/src/pages/Resources.module.css
+++ b/src/pages/Resources.module.css
@@ -26,7 +26,7 @@
     grid-row: 1 / 2;
     grid-column: 1 / 3;
     font-size: 3rem;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 1.4;
     margin-top: 35px;
     display: flex;
@@ -130,8 +130,9 @@
 .article--author {
     margin-top: 32px;
     line-height: 2;
+    font-family: "Quicksand", sans-serif;
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 700;
     display: flex;
     gap: 10px;
     align-items: center;
@@ -154,7 +155,7 @@
     display: flex;
     align-items: center;
     font-size: 0.9rem;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .resources--table-contents nav {
@@ -170,7 +171,8 @@
     justify-content: center;
     gap: 28px;
     padding-inline-start: 0;
-    background-color: var(--text-dark-color);  
+    background-color: var(--bg-dark-color);  
+    border-radius: 10px;
     padding: 15px 15px 20px 15px;
     height: 15rem;
 }
@@ -178,6 +180,7 @@
 .resources--table-contents ul li a {
     align-self: flex-start;
     color: var(--cream-color);
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-size: 0.8rem;
     text-decoration: underline;
@@ -189,6 +192,7 @@
 .resources--table-contents ul li a:hover {
     color: var(--code-blue-color);
     border: 1.7px solid var(--code-blue-color);
+    border-radius: 5px;
     padding: 2px;
     font-weight: 400; 
     text-decoration: none;
@@ -197,6 +201,7 @@
 .resources--table-contents ul li a.active {
     color: var(--code-blue-color);
     border: 1.7px solid var(--code-blue-color);
+    border-radius: 5px;
     padding: 2px;
     font-weight: 400; 
     text-decoration: none;
@@ -204,8 +209,8 @@
 
 .resources--table-contents ul li a:focus-visible {
     text-decoration: none;
-    outline: 3px dashed var(--cream-color);
-    outline-offset: 2px;
+    outline: 2px solid var(--cream-color);
+    outline-offset: 3px;
     border: none;
     border-radius: 0;
 }
